--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HKRSA 教練記錄系統 · 跳繩課堂 Checkpoint</title>
+  <title>HKJRA 教練記錄系統 · 跳繩課堂 Checkpoint</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +36,7 @@
         </a>
       </nav>
       <div class="sidebar-footer">
-        <span class="footer-tag">HKRSA 合作</span>
+        <span class="footer-tag">HKJRA 合作</span>
       </div>
     </aside>
 
