Enhance record handling and update label IDs for clarity in app.js and index.html

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <h2 class="card-title">團隊協作</h2>
               <div class="card-body">
                 <div class="field">
-                  <label>主動幫助他人 <span class="range-val" id="val-help">50</span>%</label>
+                  <label>主動幫助他人 <span class="range-val" id="val-helpOthers">50</span>%</label>
                   <div class="slider-row">
                     <input type="range" id="helpOthers" min="0" max="100" value="50">
                     <div class="quick-btns quick-pct" data-target="helpOthers">
@@ -186,7 +186,7 @@
                   </div>
                 </div>
                 <div class="field">
-                  <label>同學互動 <span class="range-val" id="val-interact">50</span>%</label>
+                  <label>同學互動 <span class="range-val" id="val-interaction">50</span>%</label>
                   <div class="slider-row">
                     <input type="range" id="interaction" min="0" max="100" value="50">
                     <div class="quick-btns quick-pct" data-target="interaction">
