--- a/index.html
+++ b/index.html
@@ -612,6 +612,7 @@
   <!-- PouchDB 模組 -->
   <script src="pouchdb-config.js"></script>
   <script src="pouchdb-storage.js"></script>
+  <script src="crypto-keys.js"></script>
   <script src="user-auth.js"></script>
   <script src="pouchdb-integration.js"></script>
   <script src="pouchdb-app-compat.js"></script>
