--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
         </a>
 
         <div class="nav-section-title">工具</div>
+        <a href="#" class="nav-item" id="navData" data-page="data" hidden>
+          <span class="nav-icon">👥</span>
+          <span class="nav-label">用戶管理</span>
+        </a>
         <a href="#" class="nav-item" id="btnExport">
           <span class="nav-icon">⬇️</span>
           <span class="nav-label">導出數據</span>
