fix: resolve login redirect issue by enhancing session validation and storage synchronization
- Improved session validation in index.html to check both 'rs-system-session' and 'current-user' keys, ensuring proper user authentication.
- Added detailed logging for session checks to aid in debugging.
- Enhanced login.html to verify session storage before redirecting to index.html, reducing the risk of race conditions.
- Implemented a retry mechanism for session storage to ensure data integrity during login.
- Created a new login-redirect-test.html for testing the fix and documenting the verification process.

--- a/login.html
+++ b/login.html
@@ -345,9 +345,25 @@
           }));
           
           showSuccess('✅ 登入成功！正在導向主應用...');
+          // 確保localStorage已同步
           setTimeout(() => {
-            window.location.href = 'index.html';
-          }, 1000);
+            // 驗證會話已保存
+            const savedSession = localStorage.getItem('rs-system-session');
+            if (savedSession) {
+              console.log('✅ 會話已驗證，開始導向...');
+              window.location.href = 'index.html';
+            } else {
+              console.error('❌ 會話保存失敗，重試中...');
+              localStorage.setItem('rs-system-session', JSON.stringify({
+                userId: user.id,
+                username: user.username,
+                loginTime: new Date().toISOString()
+              }));
+              setTimeout(() => {
+                window.location.href = 'index.html';
+              }, 500);
+            }
+          }, 800);
         } else {
           showError('❌ 使用者名稱或密碼不正確');
           btnLogin.disabled = false;
