--- a/login.html
+++ b/login.html
@@ -185,7 +185,7 @@
   <div class="login-container">
     <div class="login-header">
       <h1>◇ 教練記錄系統</h1>
-      <p>HKJRA 跳繩課堂管理平臺</p>
+      <p> 跳繩課堂管理平臺</p>
     </div>
     
     <div class="error-msg message" id="errorMsg"></div>
