--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <!-- 底部信息 -->
       <div class="sidebar-footer">
         <div class="footer-info">
-          <div class="footer-tag">HKJRA 合作</div>
+          <div class="footer-tag">合作</div>
           <div class="footer-version">v2.1.1</div>
         </div>
         <button type="button" class="btn-logout" id="btnLogout" aria-label="登出">
