feat: Implement logging system for coach actions and system events, including local storage support

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <!-- PouchDB 相容索引外掛 -->
   <script src="https://cdn.jsdelivr.net/npm/pouchdb-find@8.0.1/dist/pouchdb.find.min.js"></script>
   
+  <!-- 日誌記錄系統 -->
+  <script src="logger-service.js"></script>
+  
   <!-- 系統核心模組（整合版） -->
   <script src="system.js"></script>
 </head>
