feat: enhance logging for sidebar stats and record parsing

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>教練記錄系統 · 跳繩課堂 Checkpoint</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css?v=20260126">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- PouchDB 核心庫 -->
-  <script src="https://cdn.jsdelivr.net/npm/pouchdb@8.0.1/dist/pouchdb.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pouchdb@8.0.1/dist/pouchdb.min.js" defer></script>
   <!-- PouchDB 相容索引外掛 -->
-  <script src="https://cdn.jsdelivr.net/npm/pouchdb-find@8.0.1/dist/pouchdb.find.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pouchdb-find@8.0.1/dist/pouchdb.find.min.js" defer></script>
   
   <!-- 日誌記錄系統 -->
-  <script src="logger-service.js"></script>
+  <script src="logger-service.js?v=20260126" defer></script>
   
   <!-- 系統核心模組（整合版 v3.1） -->
-  <script src="system.js"></script>
+  <script src="system.js?v=20260126" defer></script>
 </head>
 <body>
   <div class="app">
