--- a/login.html
+++ b/login.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>教練記錄系統 · 登入</title>  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>◇</text></svg>">  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <title>教練記錄系統 · 登入</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>◇</text></svg>">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script src="logger-service.js?v=20260126_6" defer></script>
+  <script src="system.js?v=20260126_6" defer></script>
   
   <style>
     * {
@@ -239,6 +243,5 @@
     <div class="mode-indicator">本地存儲模式 • v3.1</div>
   </div>
 
-  <script src="system.js"></script>
 </body>
 </html>
