feat: implement cloud synchronization feature with PouchDB; add setup guide and configuration options

--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
   <!-- PouchDB 相容索引外掛 -->
   <script src="https://cdn.jsdelivr.net/npm/pouchdb-find@8.0.1/dist/pouchdb.find.min.js" defer></script>
   
+  <!-- 雲端同步配置 -->
+  <script src="sync-config.js" defer></script>
+  
   <!-- 日誌記錄系統 -->
-  <script src="logger-service.js?v=20260126_7" defer></script>
+  <script src="logger-service.js?v=20260129" defer></script>
   
   <!-- 系統核心模組（整合版 v3.1） -->
-  <script src="system.js?v=20260126_7" defer></script>
+  <script src="system.js?v=20260129" defer></script>
 </head>
 <body>
   <div class="app">
