feat: add file attachment functionality for class notes, including upload, preview, and download options

--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@
               <div class="field" style="padding: 0 1.25rem 1.25rem;">
                 <label for="notes">備注</label>
                 <textarea id="notes" rows="2" placeholder="課堂觀察、待跟進、下堂預告…"></textarea>
+                
+                <div style="margin-top: 0.75rem;">
+                  <label for="fileAttachment" style="display: block; margin-bottom: 0.5rem; font-size: 0.9rem; color: #64748b;">📎 附件（PDF/Word）</label>
+                  <input type="file" id="fileAttachment" accept=".pdf,.doc,.docx" style="font-size: 0.9rem;">
+                  <div id="filePreview" style="margin-top: 0.5rem; font-size: 0.85rem; color: #64748b;"></div>
+                </div>
               </div>
             </div>
 
