--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>教練記錄系統 · 跳繩課堂 Checkpoint</title>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>◇</text></svg>">
-  <link rel="stylesheet" href="styles.css?v=20260126_7">
+  <link rel="stylesheet" href="styles.css?v=20260215_1">
+  
+  <!-- ⭐ [PLAN-A1] 跨標籤頁同步樣式 -->
+  <link rel="stylesheet" href="sync-styles.css">
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -15,14 +19,20 @@
   <!-- PouchDB 相容索引外掛 -->
   <script src="https://cdn.jsdelivr.net/npm/pouchdb-find@8.0.1/dist/pouchdb.find.min.js" defer></script>
   
+  <!-- 📝 [PLAN-A1] 主控台增強器（最先加載） -->
+  <script src="console-enhancer.js" defer></script>
+  
   <!-- 雲端同步配置 -->
   <script src="sync-config.js" defer></script>
   
   <!-- 日誌記錄系統 -->
-  <script src="logger-service.js?v=20260129" defer></script>
+  <script src="logger-service.js" defer></script>
   
-  <!-- 系統核心模組（整合版 v3.1） -->
-  <script src="system.js?v=20260129" defer></script>
+  <!-- ⭐ [PLAN-A1] 跨標籤頁同步工具（在 system.js 之前） -->
+  <script src="sync-utils.js" defer></script>
+  
+  <!-- 系統核心模組（整合版 v3.1.1） -->
+  <script src="system.js" defer></script>
 </head>
 <body>
   <div class="app">
@@ -96,7 +106,7 @@
       <div class="sidebar-footer">
         <div class="footer-info">
           <div class="footer-tag">合作</div>
-          <div class="footer-version">v2.1.1</div>
+          <div class="footer-version">v3.1.1</div>
         </div>
         <button type="button" class="btn-logout" id="btnLogout" aria-label="登出">
           <span class="logout-icon">🚪</span>
