--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <!-- PouchDB 相容索引外掛 -->
   <script src="https://cdn.jsdelivr.net/npm/pouchdb-find@8.0.1/dist/pouchdb.find.min.js" defer></script>
   
-  <!-- 📝 [PLAN-A1] 主控台增強器（最先加載） -->
-  <script src="console-enhancer.js" type="module"></script>
+  <!-- 📝 [PLAN-A1] 主控台增強器（最先加載） - 修正路徑 -->
+  <script src="dev/console-enhancer.js" type="module"></script>
   
   <!-- 雲端同步配置 -->
   <script src="sync-config.js" type="module"></script>
